--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://neondb_owner:npg_v5gyItc7iJwf@ep-muddy-bread-adt1w11z-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+DATABASE_URL="postgresql://neondb_owner:npg_v5gyItc7iJwf@ep-muddy-bread-adt1w11z-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require";
